--- a/aipage.html
+++ b/aipage.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1> Julia's Projects</h1>
+    <h1> Julia's Projects </h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,11 +24,11 @@
 
   </header>
 
-  <div id="aboutme">
+  <div id="aipage">
 
-    <h2>About Me</h2>
-    <img src="img/crocfun.png" alt="Julia"/>
-    <p>My name is Julia Sovak and I’m in 11th grade. I want to be an aerospace or mechanical engineer when I grow up and one of my favorite foods is breakfast burritos. I go to the gym about 3-4 days a week for fun and I work as a lifeguard at James Lemos. Some of my goals include growing my rubber duck collection and to go skydiving with my dad.
+    <h2> AI Page </h2>
+    <img src=
+    <p>Teachable Machiene Imagine Model
 </p>
 
   </div>
