--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li><a href="index.html">Home</a></li>
         <li>|</li>
         <li><a href="aboutme.html"> About Me </a></li>
+        <li>|</li>
+        <li><a href="aipage.html"> AI Page </a></li>
       </ul>
     </nav>
 
@@ -58,7 +60,17 @@
       <div class="clear"></div>
   </div>
   <!--end of project template-->
+
+       <!--start of project template-->
+  <div class="project">
+    <img src="img/happyhygiene.png" alt="Happy Hygiene picture" />
+    <h2>Happy Hygiene App</h2>
+     <p><a href="https://snap.berkeley.edu/project?username=juliasovak&projectname=HAPPY%20HYGIENE"> Happy Hygiene App</a></p>
     
+    <p>This is the first ever app I ever made. I made it for the congressional app challenge with my friend chloe. The goal of this app was to teach kids how to create a mornign routine with 3 simple steps. I think the app turned out really cool!</p>
+      <div class="clear"></div>
+  </div>
+  <!--end of project template-->
   </div>
 
 </body>
