--- a/apcreate.html
+++ b/apcreate.html
@@ -26,11 +26,12 @@
 
   </header>
 
-  <div id="aboutme">
+  <div id="AP Create Project">
 
-    <h2>About Me</h2>
-    <img src="img/crocfun.png" alt="Julia"/>
-    <p>My name is Julia Sovak and I’m in 11th grade. I want to be an aerospace or mechanical engineer when I grow up and one of my favorite foods is breakfast burritos. I go to the gym about 3-4 days a week for fun and I work as a lifeguard at James Lemos. Some of my goals include growing my rubber duck collection and to go skydiving with my dad.
+    <h2>AP Create Project</h2>
+    <p><a href="https://snap.berkeley.edu/project?username=juliasovak&projectname=Memorization%20Flags"> Memorization Game</a></p>
+    <img src="img/Apcreate.png" alt="Ap Create"/>
+    <p>For my final AP Create project, I made the game Memorization Flags. Basically, it is a game where you have to match the flag and a country by memory. The cards flip over when you enter the number and will stay flipped up if the pair that you put in is matching.
 </p>
 
   </div>
