--- a/aipage.html
+++ b/aipage.html
@@ -19,6 +19,8 @@
         <li><a href="aboutme.html">About Me</a></li>
         <li>|</li>
         <li><a href="aipage.html">AI Page</a></li>
+        <li>|</li>
+        <li><a href ="apcreate.html"> AP Create </a></li>
 			</ul>
 		</nav>
 	</header>
