--- a/apcreate.html
+++ b/apcreate.html
@@ -21,14 +21,19 @@
         <li><a href="aipage.html"> AI Page </a></li>
         <li>|</li>
         <li><a href ="apcreate.html"> AP Create </a></li>
+        <li>|</li>
+        <li><a href="APCS.html">AP CS</a></li>
+        <li>|</li>
+        <li><a href="AdvanceEngine.html">Advance Engineering</a></li>
       </ul>
     </nav>
 
   </header>
 
   <div id="AP Create Project">
-
     <h2>AP Create Project</h2>
+
+    
     <p><a href="https://snap.berkeley.edu/project?username=juliasovak&projectname=Memorization%20Flags"> Memorization Game</a></p>
     <img src="img/Apcreate.png" alt="Ap Create"/>
     <p>For my final AP Create project, I made the game Memorization Flags. Basically, it is a game where you have to match the flag and a country by memory. The cards flip over when you enter the number and will stay flipped up if the pair that you put in is matching.
