--- a/aboutme.html
+++ b/aboutme.html
@@ -21,6 +21,10 @@
         <li><a href="aipage.html"> AI Page </a></li>
         <li>|</li>
         <li><a href ="apcreate.html"> AP Create </a></li>
+        <li>|</li>
+        <li><a href="APCS.html">AP CS</a></li>
+        <li>|</li>
+        <li><a href="AdvanceEngine.html">Advance Engineering</a></li>
       </ul>
     </nav>
 
