--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@
 
     <h2>About Me</h2>
     <img src="img/crocfun.png" alt="Julia"/>
-    <p>My name is Julia Sovak and I’m in 11th grade. I want to be an aerospace or mechanical engineer when I grow up and one of my favorite foods is breakfast burritos. I go to the gym about 3-4 days a week for fun and I work as a lifeguard at James Lemos. Some of my goals include growing my rubber duck collection and to go skydiving with my dad.
+    <p>My name is Julia Sovak and I currently attend San Diego State University as an Aerospace Engineering major. Some interesting facts about me is I've been playing the trombone since the 4th grade. I did competative wrestling for two years. My favorite food is breakfast burritos. I love to workout and to be outside. My family is the most important thing to me. I want to make advances in the aerospace world for humanity in the future, whether that be in flying car shape or sending humans to space.
 </p>
 
   </div>
