--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
   <div id="aboutme">
 
     <h2>About Me</h2>
-    <img src="img/crocfun.png" alt="Julia"/>
+    <img src="img/JET.png" alt="Julia"/>
     <p>My name is Julia Sovak and I currently attend San Diego State University as an Aerospace Engineering major. Some interesting facts about me is I've been playing the trombone since the 4th grade. I did competative wrestling for two years. My favorite food is breakfast burritos. I love to workout and to be outside. My family is the most important thing to me. I want to make advances in the aerospace world for humanity in the future, whether that be in flying car shape or sending humans to space.
 </p>
 
