--- a/Julias-Home/index.html
+++ b/Julias-Home/index.html
@@ -34,7 +34,7 @@
 
     <!--start of project template-->
   <div class="project">
-    <img src="img/meme.jpg" alt="Meme" />
+    <img src="img/juliaphoto.jpg" alt="Meme" />
     <h2>Welcome to my website!</h2>
     <p>
       I'm Julia and these are the projects I've made in AP Computer Science and Advance Engineering and Design class.
