--- a/Julias-Home/index.html
+++ b/Julias-Home/index.html
@@ -37,7 +37,7 @@
     <img src="img/juliaphoto.jpg" alt="Meme" />
     <h2>Welcome to my website!</h2>
     <p>
-      I'm Julia and these are the projects I've made in AP Computer Science and Advance Engineering and Design class.
+      I'm Julia Sovak and these are the projects I've made in AP Computer Science and Advance Engineering and Design class in high school!
     </p>
       <div class="clear"></div>
   </div>
