--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!--start of project template-->
   <div class="project">
-    <img src="img/photojulia.jpg" alt="Meme" />
+    <img src="img/photojulia.JPG" alt="Meme" />
     <h2>Welcome to my website!</h2>
     <p>
       I'm Julia Sovak and these are the projects I've made in AP Computer Science and Advance Engineering and Design class in high school!
